fixed hamburger menu opening behind the photographers

--- a/css/photographers.css
+++ b/css/photographers.css
@@ -333,7 +333,7 @@ footer .quick-links ul li {
         transform: translateX(100%);
         transition: transform 350ms ease, visibility 0s linear 350ms;
         overflow-y: auto;
-        z-index: 1;
+        z-index: 2;
         visibility: hidden;
     }
     .links ul {
